Partie deux du site terminée

--- a/index.html
+++ b/index.html
@@ -35,6 +35,28 @@
                 <button type="button" class="btn btn-primary mt-20">Explorer nos restaurants</button>
             </div>
         </header>
+        <!-- Operation -->
+        <section class="operation container">
+            <h2 class="title">Fonctionnement</h2>
+            <!-- Form -->
+            <form class="operation-actions">
+                <button class="btn btn-light btn-icon btn-alert">
+                    <span class="btn-alert-circle">1</span>
+                    <i class="fa-solid fa-font-awesome"></i>
+                    <span>Choisissez un restaurant</span>
+                </button>
+                <button class="btn btn-light btn-icon btn-alert">
+                    <span class="btn-alert-circle">2</span>
+                    <i class="fa-solid fa-euro-sign"></i>
+                    <span>Composez votre menu</span>
+                </button>
+                <button class="btn btn-light btn-icon btn-alert active">
+                    <span class="btn-alert-circle">3</span>
+                    <i class="fa-solid fa-people-roof"></i>
+                    <span>Dégustez au restaurant</span>
+                </button>
+            </form>
+        </section>
     </main>
 </body>
 </html>
