Refactorisation + fichettes réstaurant

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
                 <button type="button" class="btn btn-primary mt-20">Explorer nos restaurants</button>
             </div>
         </header>
+
         <!-- Operation -->
-        <section class="operation container">
+        <div class="operation container">
             <h2 class="title">Fonctionnement</h2>
             <!-- Form -->
             <form class="operation-actions">
@@ -56,6 +57,75 @@
                     <span>Dégustez au restaurant</span>
                 </button>
             </form>
+        </div>
+
+        <!-- Restaurants -->
+        <section class="container bg-lightgray py-40">
+            <h2 class="title">Restaurants</h2>
+            <div class="card-container">
+                <!-- Card -->
+                <article class="card">
+                    <span class="card-flag">Nouveau</span>
+                    <div class="card-img">
+                        <img src="assets/img/restaurants/jay-wennington.jpg" alt="Plat Ménilmontant">
+                    </div>
+                    <div class="card-content">
+                        <div>
+                            <h3 class="card-title">La palette du goût</h3>
+                            <p class="card-text">Ménilmontant</p>
+                        </div>
+                        <button class="card-btn btn-icon" type="button">
+                            <i class="fa-regular fa-heart"></i>
+                        </button>
+                    </div>
+                </article>
+                <!-- Card -->
+                <article class="card">
+                    <span class="card-flag">Nouveau</span>
+                    <div class="card-img">
+                        <img src="assets/img/restaurants/stil.jpg" alt="Plat Charonne">
+                    </div>
+                    <div class="card-content">
+                        <div>
+                            <h3 class="card-title">La note enchantée</h3>
+                            <p class="card-text">Charonne</p>
+                        </div>
+                        <button class="card-btn btn-icon" type="button">
+                            <i class="fa-regular fa-heart"></i>
+                        </button>
+                    </div>
+                </article>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-img">
+                        <img src="assets/img/restaurants/toa-heftiba.jpg" alt="Plat Cité Rouge">
+                    </div>
+                    <div class="card-content">
+                        <div>
+                            <h3 class="card-title">À la française</h3>
+                            <p class="card-text">Cité Rouge</p>
+                        </div>
+                        <button class="card-btn btn-icon" type="button">
+                            <i class="fa-regular fa-heart"></i>
+                        </button>
+                    </div>
+                </article>
+                <!-- Card -->
+                <article class="card">
+                    <div class="card-img">
+                        <img src="assets/img/restaurants/louis-hansel-shotsoflouis.jpg" alt="Plat Folie-Méricourt">
+                    </div>
+                    <div class="card-content">
+                        <div>
+                            <h3 class="card-title">La délice du sens</h3>
+                            <p class="card-text">Folie-Méricourt</p>
+                        </div>
+                        <button class="card-btn btn-icon" type="button">
+                            <i class="fa-regular fa-heart"></i>
+                        </button>
+                    </div>
+                </article>
+            </div>
         </section>
     </main>
 </body>
