--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="card-content">
                         <div>
-                            <h3 class="card-title">La palette du goût</h3>
+                            <a href="restaurant-palette-du-goût.html" class="card-title">La palette du goût</a>
                             <p class="card-text">Ménilmontant</p>
                         </div>
                         <button class="card-btn btn-icon" type="button">
@@ -87,7 +87,7 @@
                     </div>
                     <div class="card-content">
                         <div>
-                            <h3 class="card-title">La note enchantée</h3>
+                            <a href="restaurant-2.html" class="card-title">La note enchantée</a>
                             <p class="card-text">Charonne</p>
                         </div>
                         <button class="card-btn btn-icon" type="button">
@@ -102,7 +102,7 @@
                     </div>
                     <div class="card-content">
                         <div>
-                            <h3 class="card-title">À la française</h3>
+                            <a href="restaurant-3.html" class="card-title">À la française</a>
                             <p class="card-text">Cité Rouge</p>
                         </div>
                         <button class="card-btn btn-icon" type="button">
@@ -117,7 +117,7 @@
                     </div>
                     <div class="card-content">
                         <div>
-                            <h3 class="card-title">La délice du sens</h3>
+                            <a href="restaurant-4.html" class="card-title">La délice du sens</a>
                             <p class="card-text">Folie-Méricourt</p>
                         </div>
                         <button class="card-btn btn-icon" type="button">
