Pages restaurants terminées

--- a/restaurant-le-delice-des-sens.html
+++ b/restaurant-le-delice-des-sens.html
@@ -37,8 +37,122 @@
                     <i class="fa-regular fa-heart icon"></i>
                 </div>
 
-                <!-- TODO: REMOVE -->
-                <div style="min-height: 400px;"></div>
+                <!-- Menu step 1 -->
+                <section class="restaurant-menu-step">
+                    <!-- Title menu card -->
+                    <div class="card-restaurant">
+                        <h3 class="menu-step-title">Entrées</h3>
+                        <span class="title-border ml-5"></span>
+                    </div>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Tartare de thon</h3>
+                                <p class="card-text">Assaisonné au yuzu</p>
+                            </div>
+                            <strong class="card-price">25€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Bouchée de homard croustillant</h3>
+                                <p class="card-text">Et sa farandole de petits légumes</p>
+                            </div>
+                            <strong class="card-price">35€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Velouté de cèpes</h3>
+                                <p class="card-text">Aux truffes</p>
+                            </div>
+                            <strong class="card-price">20€</strong>
+                        </div>
+                    </article>
+                </section>
+
+                <!-- Menu step 2 -->
+                <section class="restaurant-menu-step">
+                    <!-- Title menu card -->
+                    <div class="card-restaurant">
+                        <h3 class="menu-step-title">Plats</h3>
+                        <span class="title-border ml-5"></span>
+                    </div>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Poulet rôti aux herbes de Provence</h3>
+                                <p class="card-text">Et sa crème de truffe</p>
+                            </div>
+                            <strong class="card-price">40€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Langouste rôtie</h3>
+                                <p class="card-text">Et ses légumes de saison</p>
+                            </div>
+                            <strong class="card-price">35€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Côte de boeuf Angus</h3>
+                                <p class="card-text">Et sa purée de panais</p>
+                            </div>
+                            <strong class="card-price">44€</strong>
+                        </div>
+                    </article>
+                </section>
+
+                <!-- Menu step 3 -->
+                <section class="restaurant-menu-step">
+                    <!-- Title menu card -->
+                    <div class="card-restaurant">
+                        <h3 class="menu-step-title">Desserts</h3>
+                        <span class="title-border ml-5"></span>
+                    </div>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Farandole de desserts</h3>
+                                <p class="card-text">Du chef</p>
+                            </div>
+                            <strong class="card-price">18€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Crème brulée</h3>
+                                <p class="card-text">Revisitée</p>
+                            </div>
+                            <strong class="card-price">22€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Tiramisu</h3>
+                                <p class="card-text">À la noisette</p>
+                            </div>
+                            <strong class="card-price">23€</strong>
+                        </div>
+                    </article>
+                </section>
 
                 <!-- Ending btn -->
                 <div class="ending-btn text-center">
