--- a/restaurant-palette-du-goût.html
+++ b/restaurant-palette-du-goût.html
@@ -25,26 +25,141 @@
     <!-- Main -->
     <main>
         <section>
+            <!-- Slider -->
             <div class="restaurant-slider">
                 <img src="assets/img/restaurants/jay-wennington.jpg" alt="Restaurant la palette du goût">
             </div>
     
             <!-- Menu -->
-            <div class="container-page bg-lightgray">
+            <article class="container-page bg-lightgray">
                 <!-- Heading title -->
                 <div class="heading-title">
                     <h2 class="shrikhand title">La palette du goût</h2>
                     <i class="fa-regular fa-heart icon"></i>
                 </div>
 
-                <!-- TODO: REMOVE -->
-                <div style="min-height: 400px;"></div>
+                <!-- Menu step 1 -->
+                <section class="restaurant-menu-step">
+                    <!-- Title menu card -->
+                    <div class="card-restaurant">
+                        <h3 class="menu-step-title">Entrées</h3>
+                        <span class="title-border ml-5"></span>
+                    </div>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Fricassée d'escargot</h3>
+                                <p class="card-text">Au pimet d'espelette</p>
+                            </div>
+                            <strong class="card-price">25€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Foie gras de canard mi-cuit</h3>
+                                <p class="card-text">Et ses copeaux de truffe noire</p>
+                            </div>
+                            <strong class="card-price">35€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Oeuf au plat</h3>
+                                <p class="card-text">Assaisonné à la truffe sur lit de caviar</p>
+                            </div>
+                            <strong class="card-price">20€</strong>
+                        </div>
+                    </article>
+                </section>
+
+                <!-- Menu step 2 -->
+                <section class="restaurant-menu-step">
+                    <!-- Title menu card -->
+                    <div class="card-restaurant">
+                        <h3 class="menu-step-title">Plats</h3>
+                        <span class="title-border ml-5"></span>
+                    </div>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Filet de boeuf aux herbes</h3>
+                                <p class="card-text">Accompagné de sa ribambelle de légumes</p>
+                            </div>
+                            <strong class="card-price">40€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Parmentier de queue de boeuf</h3>
+                                <p class="card-text">À la truffe noire sur sa purée de panais</p>
+                            </div>
+                            <strong class="card-price">35€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Filet de turbot</h3>
+                                <p class="card-text">Aux agrumes</p>
+                            </div>
+                            <strong class="card-price">44€</strong>
+                        </div>
+                    </article>
+                </section>
+
+                <!-- Menu step 3 -->
+                <section class="restaurant-menu-step">
+                    <!-- Title menu card -->
+                    <div class="card-restaurant">
+                        <h3 class="menu-step-title">Desserts</h3>
+                        <span class="title-border ml-5"></span>
+                    </div>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Paris-Brest</h3>
+                                <p class="card-text">Revisité</p>
+                            </div>
+                            <strong class="card-price">18€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Macaron au chocolat d'exception</h3>
+                                <p class="card-text">Et glace à la vanille de Madagascar</p>
+                            </div>
+                            <strong class="card-price">22€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Mousse au chocolat</h3>
+                                <p class="card-text">Au piment d'Espelette et à la truffe noire</p>
+                            </div>
+                            <strong class="card-price">23€</strong>
+                        </div>
+                    </article>
+                </section>
 
                 <!-- Ending btn -->
                 <div class="ending-btn text-center">
                     <button type="button" class="btn btn-primary mt-20 shadow">Commander</button>
                 </div>
-            </div>
+            </article>
         </section>
 
         <!-- Footer -->
