--- a/restaurant-a-la-francaise.html
+++ b/restaurant-a-la-francaise.html
@@ -37,8 +37,122 @@
                     <i class="fa-regular fa-heart icon"></i>
                 </div>
 
-                <!-- TODO: REMOVE -->
-                <div style="min-height: 400px;"></div>
+                <!-- Menu step 1 -->
+                <section class="restaurant-menu-step">
+                    <!-- Title menu card -->
+                    <div class="card-restaurant">
+                        <h3 class="menu-step-title">Entrées</h3>
+                        <span class="title-border ml-5"></span>
+                    </div>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Tartare de poulpe acidulé</h3>
+                                <p class="card-text">Aux zestes d'orange</p>
+                            </div>
+                            <strong class="card-price">25€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Velouté de légumes d'antan</h3>
+                                <p class="card-text">Carotte, panais, topinambour</p>
+                            </div>
+                            <strong class="card-price">35€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Soupe à l'oignon</h3>
+                                <p class="card-text">Revisitée</p>
+                            </div>
+                            <strong class="card-price">20€</strong>
+                        </div>
+                    </article>
+                </section>
+
+                <!-- Menu step 2 -->
+                <section class="restaurant-menu-step">
+                    <!-- Title menu card -->
+                    <div class="card-restaurant">
+                        <h3 class="menu-step-title">Plats</h3>
+                        <span class="title-border ml-5"></span>
+                    </div>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Coquilles Saint-Jacques</h3>
+                                <p class="card-text">Accompagnées d'une purée de panais</p>
+                            </div>
+                            <strong class="card-price">40€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Magret de canard</h3>
+                                <p class="card-text">Et parmentier de pommes de terre</p>
+                            </div>
+                            <strong class="card-price">35€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Pigeonneau d’Ille-et-Vilaine</h3>
+                                <p class="card-text">Sur son lit de gnocchis aux légumes</p>
+                            </div>
+                            <strong class="card-price">44€</strong>
+                        </div>
+                    </article>
+                </section>
+
+                <!-- Menu step 3 -->
+                <section class="restaurant-menu-step">
+                    <!-- Title menu card -->
+                    <div class="card-restaurant">
+                        <h3 class="menu-step-title">Desserts</h3>
+                        <span class="title-border ml-5"></span>
+                    </div>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Pétales de violettes glacés</h3>
+                                <p class="card-text">Et purée de noisettes</p>
+                            </div>
+                            <strong class="card-price">18€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Fondant au chocolat</h3>
+                                <p class="card-text">Revisité</p>
+                            </div>
+                            <strong class="card-price">22€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Millefeuille croustillant</h3>
+                                <p class="card-text">Myrtilles et pâte d’amande</p>
+                            </div>
+                            <strong class="card-price">23€</strong>
+                        </div>
+                    </article>
+                </section>
 
                 <!-- Ending btn -->
                 <div class="ending-btn text-center">
