--- a/restaurant-note-enchantee.html
+++ b/restaurant-note-enchantee.html
@@ -37,8 +37,132 @@
                     <i class="fa-regular fa-heart icon"></i>
                 </div>
 
-                <!-- TODO: REMOVE -->
-                <div style="min-height: 400px;"></div>
+                <!-- Menu step 1 -->
+                <section class="restaurant-menu-step">
+                    <!-- Title menu card -->
+                    <div class="card-restaurant">
+                        <h3 class="menu-step-title">Entrées</h3>
+                        <span class="title-border ml-5"></span>
+                    </div>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Ravioles de foie gras</h3>
+                                <p class="card-text">Accompagnés de leur crème à la truffe</p>
+                            </div>
+                            <strong class="card-price">25€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Caviar osciètre</h3>
+                                <p class="card-text">Sur blini à la farine de blé noir</p>
+                            </div>
+                            <strong class="card-price">35€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Homard et espuma de potiron</h3>
+                                <p class="card-text">Mariné aux zestes d'orange</p>
+                            </div>
+                            <strong class="card-price">20€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Foie gras de canard cuit entier</h3>
+                                <p class="card-text">Confiture de figue et pain toasté</p>
+                            </div>
+                            <strong class="card-price">35€</strong>
+                        </div>
+                    </article>
+                </section>
+
+                <!-- Menu step 2 -->
+                <section class="restaurant-menu-step">
+                    <!-- Title menu card -->
+                    <div class="card-restaurant">
+                        <h3 class="menu-step-title">Plats</h3>
+                        <span class="title-border ml-5"></span>
+                    </div>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Noix de coquilles Saint-Jacques</h3>
+                                <p class="card-text">Sur lit de purée de céleri-rave</p>
+                            </div>
+                            <strong class="card-price">40€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Langoustine poêlée</h3>
+                                <p class="card-text">Purée de patate douce</p>
+                            </div>
+                            <strong class="card-price">35€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Mijoté de queue de boeuf</h3>
+                                <p class="card-text">Et riz sauvage aux zestes de citron</p>
+                            </div>
+                            <strong class="card-price">44€</strong>
+                        </div>
+                    </article>
+                </section>
+
+                <!-- Menu step 3 -->
+                <section class="restaurant-menu-step">
+                    <!-- Title menu card -->
+                    <div class="card-restaurant">
+                        <h3 class="menu-step-title">Desserts</h3>
+                        <span class="title-border ml-5"></span>
+                    </div>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Macaron noisette et chocolat</h3>
+                                <p class="card-text">Glace au caramel brun et sel de Guérande</p>
+                            </div>
+                            <strong class="card-price">18€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Baba au rhum revisité</h3>
+                                <p class="card-text">Avec son coulis de citron</p>
+                            </div>
+                            <strong class="card-price">22€</strong>
+                        </div>
+                    </article>
+                    <!-- Card -->
+                    <article class="card">
+                        <div class="card-content align-end">
+                            <div>
+                                <h3 class="card-title">Tarte au citron meringuée</h3>
+                                <p class="card-text">Déstructurée</p>
+                            </div>
+                            <strong class="card-price">23€</strong>
+                        </div>
+                    </article>
+                </section>
 
                 <!-- Ending btn -->
                 <div class="ending-btn text-center">
