--- a/restaurant-note-enchantee.html
+++ b/restaurant-note-enchantee.html
@@ -52,6 +52,9 @@
                                 <p class="card-text">Accompagnés de leur crème à la truffe</p>
                             </div>
                             <strong class="card-price">25€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -62,6 +65,9 @@
                                 <p class="card-text">Sur blini à la farine de blé noir</p>
                             </div>
                             <strong class="card-price">35€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -72,6 +78,9 @@
                                 <p class="card-text">Mariné aux zestes d'orange</p>
                             </div>
                             <strong class="card-price">20€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -82,6 +91,9 @@
                                 <p class="card-text">Confiture de figue et pain toasté</p>
                             </div>
                             <strong class="card-price">35€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                 </section>
@@ -101,6 +113,9 @@
                                 <p class="card-text">Sur lit de purée de céleri-rave</p>
                             </div>
                             <strong class="card-price">40€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -111,6 +126,9 @@
                                 <p class="card-text">Purée de patate douce</p>
                             </div>
                             <strong class="card-price">35€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -121,6 +139,9 @@
                                 <p class="card-text">Et riz sauvage aux zestes de citron</p>
                             </div>
                             <strong class="card-price">44€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                 </section>
@@ -140,6 +161,9 @@
                                 <p class="card-text">Glace au caramel brun et sel de Guérande</p>
                             </div>
                             <strong class="card-price">18€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -150,6 +174,9 @@
                                 <p class="card-text">Avec son coulis de citron</p>
                             </div>
                             <strong class="card-price">22€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -160,6 +187,9 @@
                                 <p class="card-text">Déstructurée</p>
                             </div>
                             <strong class="card-price">23€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                 </section>
