--- a/restaurant-palette-du-gout.html
+++ b/restaurant-palette-du-gout.html
@@ -48,11 +48,14 @@
                     <!-- Card -->
                     <article class="card">
                         <div class="card-content align-end">
-                            <div>
+                            <div class="overflow-hidden">
                                 <h3 class="card-title">Fricassée d'escargot</h3>
-                                <p class="card-text">Au pimet d'espelette</p>
+                                <p class="card-text text-truncate">Au pimet d'espelette</p>
                             </div>
                             <strong class="card-price">25€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -63,6 +66,9 @@
                                 <p class="card-text">Et ses copeaux de truffe noire</p>
                             </div>
                             <strong class="card-price">35€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -73,6 +79,9 @@
                                 <p class="card-text">Assaisonné à la truffe sur lit de caviar</p>
                             </div>
                             <strong class="card-price">20€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                 </section>
@@ -92,6 +101,9 @@
                                 <p class="card-text">Accompagné de sa ribambelle de légumes</p>
                             </div>
                             <strong class="card-price">40€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -102,6 +114,9 @@
                                 <p class="card-text">À la truffe noire sur sa purée de panais</p>
                             </div>
                             <strong class="card-price">35€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -112,6 +127,9 @@
                                 <p class="card-text">Aux agrumes</p>
                             </div>
                             <strong class="card-price">44€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                 </section>
@@ -131,6 +149,9 @@
                                 <p class="card-text">Revisité</p>
                             </div>
                             <strong class="card-price">18€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -141,6 +162,9 @@
                                 <p class="card-text">Et glace à la vanille de Madagascar</p>
                             </div>
                             <strong class="card-price">22€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -151,6 +175,9 @@
                                 <p class="card-text">Au piment d'Espelette et à la truffe noire</p>
                             </div>
                             <strong class="card-price">23€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                 </section>
