--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
                     </div>
                     <div class="card-content">
                         <div>
-                            <a href="restaurant-palette-du-goût.html" class="card-title">La palette du goût</a>
+                            <a href="restaurant-palette-du-gout.html" class="card-title">La palette du goût</a>
                             <p class="card-text">Ménilmontant</p>
                         </div>
                         <button class="card-btn btn-icon" type="button">
-                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-regular fa-heart icon icon-empty"></i>
+                            <i class="fa-solid fa-heart icon icon-full"></i>
                         </button>
                     </div>
                 </article>
@@ -91,7 +92,8 @@
                             <p class="card-text">Charonne</p>
                         </div>
                         <button class="card-btn btn-icon" type="button">
-                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-regular fa-heart icon icon-empty"></i>
+                            <i class="fa-solid fa-heart icon icon-full"></i>
                         </button>
                     </div>
                 </article>
@@ -106,7 +108,8 @@
                             <p class="card-text">Cité Rouge</p>
                         </div>
                         <button class="card-btn btn-icon" type="button">
-                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-regular fa-heart icon icon-empty"></i>
+                            <i class="fa-solid fa-heart icon icon-full"></i>
                         </button>
                     </div>
                 </article>
@@ -121,7 +124,8 @@
                             <p class="card-text">Folie-Méricourt</p>
                         </div>
                         <button class="card-btn btn-icon" type="button">
-                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-regular fa-heart icon icon-empty"></i>
+                            <i class="fa-solid fa-heart icon icon-full"></i>
                         </button>
                     </div>
                 </article>
