--- a/restaurant-a-la-francaise.html
+++ b/restaurant-a-la-francaise.html
@@ -52,6 +52,9 @@
                                 <p class="card-text">Aux zestes d'orange</p>
                             </div>
                             <strong class="card-price">25€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -62,6 +65,9 @@
                                 <p class="card-text">Carotte, panais, topinambour</p>
                             </div>
                             <strong class="card-price">35€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -72,6 +78,9 @@
                                 <p class="card-text">Revisitée</p>
                             </div>
                             <strong class="card-price">20€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                 </section>
@@ -91,6 +100,9 @@
                                 <p class="card-text">Accompagnées d'une purée de panais</p>
                             </div>
                             <strong class="card-price">40€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -101,6 +113,9 @@
                                 <p class="card-text">Et parmentier de pommes de terre</p>
                             </div>
                             <strong class="card-price">35€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -111,6 +126,9 @@
                                 <p class="card-text">Sur son lit de gnocchis aux légumes</p>
                             </div>
                             <strong class="card-price">44€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                 </section>
@@ -130,6 +148,9 @@
                                 <p class="card-text">Et purée de noisettes</p>
                             </div>
                             <strong class="card-price">18€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -140,6 +161,9 @@
                                 <p class="card-text">Revisité</p>
                             </div>
                             <strong class="card-price">22€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -150,6 +174,9 @@
                                 <p class="card-text">Myrtilles et pâte d’amande</p>
                             </div>
                             <strong class="card-price">23€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                 </section>
