--- a/restaurant-le-delice-des-sens.html
+++ b/restaurant-le-delice-des-sens.html
@@ -52,6 +52,9 @@
                                 <p class="card-text">Assaisonné au yuzu</p>
                             </div>
                             <strong class="card-price">25€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -62,6 +65,9 @@
                                 <p class="card-text">Et sa farandole de petits légumes</p>
                             </div>
                             <strong class="card-price">35€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -72,6 +78,9 @@
                                 <p class="card-text">Aux truffes</p>
                             </div>
                             <strong class="card-price">20€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                 </section>
@@ -91,6 +100,9 @@
                                 <p class="card-text">Et sa crème de truffe</p>
                             </div>
                             <strong class="card-price">40€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -101,6 +113,9 @@
                                 <p class="card-text">Et ses légumes de saison</p>
                             </div>
                             <strong class="card-price">35€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -111,6 +126,9 @@
                                 <p class="card-text">Et sa purée de panais</p>
                             </div>
                             <strong class="card-price">44€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                 </section>
@@ -130,6 +148,9 @@
                                 <p class="card-text">Du chef</p>
                             </div>
                             <strong class="card-price">18€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -140,6 +161,9 @@
                                 <p class="card-text">Revisitée</p>
                             </div>
                             <strong class="card-price">22€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                     <!-- Card -->
@@ -150,6 +174,9 @@
                                 <p class="card-text">À la noisette</p>
                             </div>
                             <strong class="card-price">23€</strong>
+                            <button class="card-check" type="button">
+                                <i class="fa-solid fa-check-circle icon"></i>
+                            </button>
                         </div>
                     </article>
                 </section>
